--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "siglent-sdx-mcp",
+  "name": "siglent-sds-mcp",
   "version": "1.0.0",
-  "description": "MCP server for Siglent SDX oscilloscope control via SCPI over TCP sockets",
+  "description": "MCP server for Siglent SDS oscilloscope control via SCPI over TCP sockets",
   "type": "module",
   "main": "build/index.js",
   "bin": {
-    "siglent-sdx-mcp": "./build/index.js"
+    "siglent-sds-mcp": "./build/index.js"
   },
   "files": [
     "build/**/*.js",
@@ -30,7 +30,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/OWNER/siglent-sdx-mcp.git"
+    "url": "https://github.com/MagnusJohansson/siglent-sds-mcp.git"
   },
   "author": "Magnus Johansson",
   "license": "MIT",
